<package format="2">
    <name>smpl_test</name>
    <version>0.0.0</version>
    <description>smpl_test</description>
    <author email="bcohen@seas.upenn.edu">Benjamin Cohen</author>
    <maintainer email="bcohen@seas.upenn.edu">Benjamin Cohen</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <!-- <depend>geometry_msgs</depend> -->
    <!-- <depend>moveit_msgs</depend> -->
    <!-- <depend>moveit_ros_planning</depend> -->
    <!-- <depend>orocos_kdl</depend> -->

    <depend>eigen_conversions</depend>
    <depend>kdl_conversions</depend>
    <depend>leatherman</depend>
    <depend>octomap_msgs</depend>
    <depend>roscpp</depend>
    <depend>sbpl_collision_checking</depend>
    <depend>sbpl_collision_checking_test</depend>
    <depend>sbpl_kdl_robot_model</depend>
    <depend>sbpl_pr2_robot_model</depend>
    <depend>smpl</depend>
    <depend>smpl_ompl_interface</depend>
    <depend>smpl_ros</depend>
    <depend>visualization_msgs</depend>
</package>
